--- a/main.html
+++ b/main.html
@@ -10,7 +10,20 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-
+     <table >
+		 <tr>
+			 <th>roll number</th>
+			 <th>name</th>
+		 </tr>
+		 <tr>
+			 <td>120</td>
+			 <td>Ram</td>
+		 </tr>
+		 <tr>
+			 <td>121</td>
+			 <td>Ravi</td>
+		 </tr>
+	 </table>
 </body>
 
 </html>
