--- a/main.html
+++ b/main.html
@@ -10,20 +10,25 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-     <table >
-		 <tr>
-			 <th>roll number</th>
-			 <th>name</th>
-		 </tr>
-		 <tr>
-			 <td>120</td>
-			 <td>Ram</td>
-		 </tr>
-		 <tr>
-			 <td>121</td>
-			 <td>Ravi</td>
-		 </tr>
-	 </table>
+     <table>
+        <thead>
+            <tr>
+                <th>Roll number</th>
+                <th>Name</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>101</td>
+                <td>John Doe</td>
+            </tr>
+            <tr>
+                <td>102</td>
+                <td>Jane Smith</td>
+            </tr>
+            <!-- Add more rows as needed -->
+        </tbody>
+    </table>
 </body>
 
 </html>
